--- a/packages/reactivity/test/index.html
+++ b/packages/reactivity/test/index.html
@@ -8,7 +8,9 @@
   <body>
     <script>
       const { reactive } = VueReactivity
-      reactive()
+      const a = { name: 100, user: { age: 100 }}
+      const proxyA = reactive(a)
+      console.log(proxyA, proxyA.user)
     </script>
   </body>
 </html>
